Fix alignment issues on elections page

--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -736,7 +736,9 @@ Partners
         padding-top: 5vh;
     }
 
-    
+    .border-right {
+        border-right: 0px solid #dee2e6!important;
+    }
     
     
 
@@ -1014,7 +1016,9 @@ Partners
 @media only screen and (min-width: 300px) and (max-width: 899px) and (orientation : landscape)  {
 
    
-    
+    .border-right {
+        border-right: 0px solid #dee2e6!important;
+    }
 
     .iconPaddingTop {
         padding-top: 3vw;
@@ -1126,9 +1130,17 @@ Partners
     All
     */
     
-   
+    .border-right {
+        border-right: 0px solid #dee2e6!important;
+    }
+
     .iconPaddingTop {
-        padding-top: 0;
+        padding-top: 5vh;
+    }
+
+    .electionsCardTitle2 {
+        text-align: center;
+        padding-bottom: 2vh;
     }
     
 
